kubernetes/24-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-app-service

spec:
  selector:
    app: final-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
