kubernetes/24-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-app-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: final-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: final-app-service
                port:
                  number: 80
